@@ -6,6 +6,13 @@
 
 	* src/plot2d.c (eval_plots):  Update GPVAL_DATA values after plot in
 	tabulate mode just as for normal plotting mode.
+	Bug #3041233
+
+	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/save.c src/set.c
+	src/show.c src/tables.c src/tables.h:
+	New option "set key opaque".   If requested, the code makes two passes
+	over each "plot" command.  The actual graph is drawn during the first
+	pass, and the key box with plot samples is drawn during the second pass.
 
 2010-08-05  Ethan A Merritt  <merritt@u.washington.edu>
 
